[cp2] template names clipped in css to avoid overflow

--- a/cp2/ControlPanel/static_cp/css/templates.css
+++ b/cp2/ControlPanel/static_cp/css/templates.css
@@ -132,6 +132,9 @@ div.block {
     font-size: var(--fs-medium);
     font-weight: var(--fw-medium);
     text-align: center;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .set-images {
